# ray_tracer_rendering

./: README.md
RayTracingInOneWeekend/: README.md
RayTracingInOneWeekend/MiddleResult/: main(before_chapter7).cpp
RayTracingInOneWeekend/Source/: CMakeLists.txt  camera.h  color.h  hittable_list.h  main.cpp  material.h  object.h  ray.h  rtweekend.h  vec3.h
RayTracingTheNextWeek/: README.md
RayTracingTheNextWeek/Source/: CMakeLists.txt  constant_medium.h  main.cpp  material.h  object.h
RayTracingTheRestOfYourLife/: README.md
RayTracingTheRestOfYourLife/MCIntegrationPractice/: MCIntegrationPractice.sln
RayTracingTheRestOfYourLife/MCIntegrationPractice/MCIntegrationPractice/: MCIntegrationPractice.vcxproj  MCIntegrationPractice.vcxproj.filters  Mcintegration.cpp
RayTracingTheRestOfYourLife/MiddleResult/: chapter7_sampling.ipynb
RayTracingTheRestOfYourLife/MiddleResult/code_before_chapter12/: bvh.h  camera.h  color.h  hittable_list.h  main.cpp  material.h  object.h  pdf.h  ray.h  rtweekend.h  vec3.h
RayTracingTheRestOfYourLife/Src/: CMakeLists.txt  aabb.h  box.h  color.h  hittable_list.h  image_text.ppm  main.cpp  material.h  object.h  onb.h  pdf.h  perlin.h  rtw_stb_image.h  texture.h
